- moved com.webmetrics -> com.webmetrics.harpoon for clarity  - configured jetty to load files from directory vs classpath  - package webapp files with zip distribution

--- a/pom.xml
+++ b/pom.xml
@@ -12,17 +12,60 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>release</id>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>appassembler-maven-plugin</artifactId>
+                        <version>1.1.1</version>
+                        <configuration>
+                            <repositoryLayout>flat</repositoryLayout>
+                            <repositoryName>lib</repositoryName>
+                            <programs>
+                                <program>
+                                    <mainClass>com.webmetrics.harpoon.Main</mainClass>
+                                    <name>harpoon</name>
+                                </program>
+                            </programs>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>assemble</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <configuration>
+                            <descriptors>
+                                <descriptor>src/main/assembly.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <defaultGoal>install</defaultGoal>
-
-        <resources>
-            <resource>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>*</include>
-                </includes>
-            </resource>
-        </resources>
 
         <plugins>
             <plugin>
@@ -34,7 +77,7 @@
                     <repositoryName>lib</repositoryName>
                     <programs>
                         <program>
-                            <mainClass>com.webmetrics.Main</mainClass>
+                            <mainClass>com.webmetrics.harpoon.Main</mainClass>
                             <name>harpoon</name>
                         </program>
                     </programs>
@@ -130,6 +173,12 @@
                 <version>1.0</version>
                 <type>jar</type>
                 <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.sli4j</groupId>
+            <artifactId>sli4j-slf4j-jdk14</artifactId>
+            <version>2.0</version>
         </dependency>
     </dependencies>
 </project>
